--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 asgiref==3.8.1
 Django==5.0.7
 gunicorn==22.0.0
-mysqlclient==2.2.4
 packaging==24.1
+psycopg2==2.9.9
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.1
